--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "taddo3-package",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "taddo3-package for vavjs",
   "main": "src/index.js",
   "scripts": {
     "test": "mocha --color test/test.js",
@@ -11,7 +11,10 @@
     "type": "git",
     "url": "git+https://github.com/taddo3/taddo3-package.git"
   },
-  "keywords": ["hello", "world"],
+  "keywords": [
+    "hello",
+    "world"
+  ],
   "author": "tadeasdrahovsky@gmail.com",
   "license": "ISC",
   "bugs": {
@@ -19,6 +22,7 @@
   },
   "homepage": "https://github.com/taddo3/taddo3-package#readme",
   "dependencies": {
+    "juromecir-package": "git+https://github.com/JuroMecir/JuroMecir-package.git",
     "mocha": "^6.2.2"
   }
 }
