--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taddo3-package",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "taddo3-package for vavjs",
   "main": "src/index.js",
   "scripts": {
@@ -24,5 +24,8 @@
   "dependencies": {
     "juromecir-package": "git+https://github.com/JuroMecir/JuroMecir-package.git",
     "mocha": "^6.2.2"
+  },
+  "devDependencies": {
+  	"mocha": "^6.2.2"
   }
 }
